welcome service added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-welcome.message : Hello Welcome from Application Properties
+logging.level.org.springframework: INFO
+app.name: Govind
+welcome.message : Hello Welcome from Application Properties ${app.name}
