--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.profiles.active=prod
 logging.level.org.springframework: INFO
 app.name: Govind
 welcome.message : Hello Welcome from Application Properties ${app.name}
+
+basic.val =value
+basic.num =22
+basic.isTrue =false
